[tool.poetry]
name = "douze"
version = "0.1.0"
description = "A DigitalOcean API client to help with 12-factors apps"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
typefit = "^0.3.0"
httpx = "<0.13"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
