[tool.poetry]
name = "douze"
version = "0.2.0"
description = "A DigitalOcean API client to help with 12-factors apps"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typefit = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
