[tool.poetry]
name = "douze"
version = "0.2.2"
description = "A DigitalOcean API client to help with 12-factors apps"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typefit = "^0.4.2"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
ipython = "*"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
